# TSMC-Hackathon-2024-IT-Infra

./: .gitignore  Dockerfile  Makefile  README.md  cloudRunAction.md  conversation_manager.py  docker-compose.yml  main.py  monitor_runner.py  pyproject.toml  requirements.txt  simulate_runner.py  template.env
.github/workflows/: bandit-action.yaml  consumer-docker.yaml  google-cloudrun-docker.yaml  google-cloudrun-source.yml  monitor-test.yaml  wheel-ci-test.yaml
Discord-Bot/: bot.py  embed_mess.py  feedback.py  message.py  requirements.txt
ai/: analyze.py  preprocess.py  requirements.txt
ai2/: log_analyzer.py
ai2/tests/: conftest.py  data.csv  log_analyzer_test.py
backend/: Dockerfile  main.py
bot/: bot.py  feedback.py  message.py  requirements.txt  thread.py
bot/tests/: conftest.py  test_discord_bot.py  test_mesage.py
ci/wheel/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.runner.txt  requirements.txt  template.env
ci/wheel/dependency/: check_service.py  deploy_iamge.py
ci/wheel/runner/: run.py  service.py
ci/wheel/src/: app.py
ci/wheel/src/core/: api.py  config.py  schema.py  service.py
ci/wheel/yaml/: a.yaml  consumer.yaml  template.yaml  test-monitor.yaml  test.yaml
consumer/: .dockerignore  Dockerfile  Makefile  pyproject.toml  requirements.txt  template.env
consumer/src/: app.py  run.py
consumer/src/api/: full.py  health.py  job.py  state.py  status.py
consumer/src/core/: config.py
consumer/src/schema/: statistics.py
consumer/src/services/: full.py  job.py  log.py  statistics.py
consumer/src/state/: instance.py  models.py
cornjob/: run.py  template.env
data/sample/: Instance Count.csv  Request Count.csv  Request Latency.csv
data/test/: Container CPU Utilization.csv  Container Memory Utilization.csv  Container Startup Latency.csv  Instance Count.csv  Request Count.csv  Request Latency.csv
docs/: Idea.md  README.old.md
example-action/: cloud-run-from-source.yaml
monitor/: Makefile  README.md  monitor_runner.py  pyproject.toml
working-action/: google-cloudrun-docker.yaml
(+21 files in other folders)
