[tool.poetry]
name = "tsmc-hackathon-2024-it-infra-root"
version = "0.1.0"
description = "TSMC hackathon 2024 IT Infor Group"
authors = ["jason810496 <810496@email.wlsh.tyc.edu.tw>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.6.0"
ruff = "^0.1.14"
google-cloud-run = "^0.10.1"
google-cloud-logging = "^3.9.0"
google-cloud-monitoring = "^2.18.0"
python-dotenv = "1.0.1"
discord-py = "^2.3.2"
google-cloud-aiplatform = "1.39.0"
langchain = "0.1.3"
pandas = "2.2.0"
langchain-google-vertexai = "0.0.2"
pyarrow = "^15.0.0"
redis = "^5.0.1"
pytest = "7.4.4"
coverage = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
