[tool.poetry]
name = "tsmc-hackathon-2024-it-infra"
version = "0.1.0"
description = "TSMC hackathon 2024 IT Infor Group"
authors = ["jason810496 <810496@email.wlsh.tyc.edu.tw>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.1.14"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
python-dotenv = "^1.0.0"
psutil = "^5.9.8"
sentry-sdk = "^1.39.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
