[tool.poetry]
name = "ci-wheel"
version = "0.1.0"
description = ""
authors = ["jason810496 <810496@email.wlsh.tyc.edu.tw>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
